Minor refactor